--- a/html/nav.html
+++ b/html/nav.html
@@ -25,7 +25,7 @@
             <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('config_check')">Config check</a></li>
        		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('sites')">Sites list</a></li>
        		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('database_check')">Database check</a></li>
-			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate_run')">Activate run</a></li>
+			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate')">Activate run</a></li>
 		</ul>
 		
 	</div>
