--- a/html/navBar.html
+++ b/html/navBar.html
@@ -25,10 +25,41 @@
         </button>
       </div>
       <div class="modal-body">
+        
         <p>
-        <ul>
-            <li>Change/update the site list using the menu-item <i>"edit-sites"</i></li>
-        <ul>
+          <b>The partition splitting scripts execute for the 00Z and 12Z runs of Auswave each day. Check that the <i>Active Sites</i> are configured correctly using <i>"Config check"</i></b>
+        </p>
+        <p>
+          <b>Config check</b>  
+          <ul>
+            <li><i>"Config check"</i> should show a green highlighted <i>"Sites config and exclusiions up to date!"</i>, 
+              otherwise, if sites are highlighted in yellow they should be either added to the configuration file or the exlusion file.</li>
+            <li>the <i>configuration</i> file and the <i>exclusion</i> file both need to be kept up to date</li>  
+            <li>update the sites config file using menu item <i>"edit-config"</i></li>
+            <li>sites config file has the format "forecast_name", "table_name", "partions"</li>
+            <li>update the sites to exclude (eg: land based sites) using menu item <i>"edit-exclude"</i></li>
+            <li>exlusion file has the format "forecast_name"</li>
+          </ul>
+        </p>
+        <p>
+          <b>Sites list</b>  
+          <ul>
+            <li>html table of sites from the database linking to api's used for the data retrieval</li>  
+            <li>data is the latest available in the database for each particular site</i></li>          
+          </ul>
+        </p>  
+        <p>
+          <b>Database check</b>  
+          <ul>
+            <li>query the database to see the current site list and run_times that are saved </li>  
+          </ul>
+        </p>  
+        <p>
+          <b>Activate run</b>  
+          <ul>
+            <li>activate a manual run of the partion splitter choosing individual sites or all</li>  
+            <li>by default it will run using the latest available auswave data to split</li>  
+          </ul>
         </p>
         <br>
         <h7 class="font-italic">For suggestions and problems: <a href="mailto:darryl.vink@bom.gov.au">daz.vink@bom.gov.au</a> </h7>             
