added logfile to dashboard

--- a/html/nav.html
+++ b/html/nav.html
@@ -26,6 +26,7 @@
        		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('sites')">Sites list</a></li>
        		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('database_check')">Database check</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate')">Activate run</a></li>
+			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('logging')">Log file</a></li>
 		</ul>
 		
 	</div>
