updated dashboard with auswave tables from sites_api.cgi

--- a/html/navBar.html
+++ b/html/navBar.html
@@ -55,6 +55,12 @@
           </ul>
         </p>  
         <p>
+          <b>Table names</b>  
+          <ul>
+            <li>Auswave table names and their respective lat lons. Useful for setting up the configuration file </li>  
+          </ul>
+        </p>  
+        <p>
           <b>Activate run</b>  
           <ul>
             <li>activate a manual run of the partion splitter choosing individual sites or all</li>  
