--- a/html/navBar.html
+++ b/html/navBar.html
@@ -55,6 +55,12 @@
           </ul>
         </p>  
         <p>
+          <b>Active sites</b>  
+          <ul>
+            <li>Ofcast active site list with shift, name, days, lat, lon </li>  
+          </ul>
+        </p>  
+        <p>
           <b>Table names</b>  
           <ul>
             <li>Auswave table names and their respective lat lons. Useful for setting up the configuration file </li>  
