--- a/html/nav.html
+++ b/html/nav.html
@@ -23,8 +23,9 @@
 		
 		<ul class="nav sidebar-nav flex-column">
             <li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('config_check')">Config check</a></li>
-       		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('sites')">Sites list</a></li>
+       		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('sites')">Site partition tables</a></li>
        		<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('database_check')">Database check</a></li>
+			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('active_sites')">Active sites</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('table_names')">Auswave table names</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate')">Activate run</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('logging')">Log file</a></li>
