--- a/README_JSONAUTOSEAS.html
+++ b/README_JSONAUTOSEAS.html
@@ -1,70 +1,102 @@
-<h1>jsonAutoSeas API Documentation</h1>
-<hr>
-<h2>Overview</h2>
-<hr>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="github-markdown.css">
+    </head>
+    <body><h1 id="jsonautoseas-api-documentation">jsonAutoSeas API Documentation</h1>
+
+<hr />
+
+<h2 id="overview">Overview</h2>
+
+<hr />
+
 <p>The jsonAutoSeas API provides sea state based on wind conditions at a given site. In the backend there are fetch and depth tables for each site that need to be maintained. Fetch and depth tables are used as part of the Autoseas generated seas calculations</p>
-<h2>API Endpoint</h2>
-<hr>
+
+<h2 id="api-endpoint">API Endpoint</h2>
+
+<hr />
+
 <ul>
-<li><strong>URL</strong>: <code class="notranslate">http://wa-vw-er/webapps/er_ml_projects/davink/amphitrite/jsonAutoSeas.cgi</code></li>
+<li><strong>URL</strong>: <code>http://wa-vw-er/webapps/er_ml_projects/davink/amphitrite/jsonAutoSeas.cgi</code></li>
 </ul>
-<h2>Request Parameters</h2>
-<hr>
+
+<h2 id="request-parameters">Request Parameters</h2>
+
+<hr />
+
 <p>The API accepts the following query parameters:</p>
+
 <ol>
-<li>
-<p><code class="notranslate">first_time_step</code> (required)</p>
+<li><p><code>first_time_step</code> (required)</p>
+
 <ul>
-<li>Format: <code class="notranslate">YYYYMMDDHH</code></li>
+<li>Format: <code>YYYYMMDDHH</code></li>
 <li>Description: Indicates the time step of the first wind values in UTC.</li>
-</ul>
-</li>
-<li>
-<p><code class="notranslate">site</code> (required)</p>
+</ul></li>
+<li><p><code>site</code> (required)</p>
+
 <ul>
-<li>Format: String with <code class="notranslate">%20</code> as whitespace</li>
+<li>Format: String with <code>%20</code> as whitespace</li>
 <li>Description: Specifies the site name for partitioned data retrieval.</li>
-</ul>
-</li>
-<li>
-<p><code class="notranslate">src</code> (required)</p>
+</ul></li>
+<li><p><code>src</code> (required)</p>
+
 <ul>
-<li>Values: <code class="notranslate">autoseas</code>, <code class="notranslate">smush</code>, <code class="notranslate">partition</code></li>
-<li><code class="notranslate">autoseas</code>: Auto seas calculation based on the winds passed</li>
-<li><code class="notranslate">smush</code>: A smush of the Auswave partitioned data and the autoseas generated winds. Highest energy at each timestep wins.</li>
-<li><code class="notranslate">partition</code>: Auswave swell partitioned data</li>
-</ul>
-</li>
-<li>
-<p><code class="notranslate">winds</code> (required)</p>
+<li>Values: <code>autoseas</code>, <code>smush</code>, <code>partition</code></li>
+<li><code>autoseas</code>: Auto seas calculation based on the winds passed</li>
+<li><code>smush</code>: A smush of the Auswave partitioned data and the autoseas generated winds. Highest energy at each timestep wins.</li>
+<li><code>partition</code>: Auswave swell partitioned data</li>
+</ul></li>
+<li><p><code>winds</code> (required)</p>
+
 <ul>
-<li>Format: <code class="notranslate">dir[degrees]/spd[kts]/time_period[hrs]</code></li>
-<li>Description: Specifies winds to use for calculations depending on <code class="notranslate">src</code> parameter. Format is direction (degrees), speed (knots), and time period (hours). Time period is the time difference between the last wind and the current.</li>
-</ul>
-</li>
+<li>Format: <code>dir[degrees]/spd[kts]/time_period[hrs]</code></li>
+<li>Description: Specifies winds to use for calculations depending on <code>src</code> parameter. Format is direction (degrees), speed (knots), and time period (hours). Time period is the time difference between the last wind and the current.</li>
+</ul></li>
 </ol>
-<h2>Response Format</h2>
-<hr>
-<p>The response is a JSON object with the following structure:<br>
-{"seas": [[seas_hs, seas_pd, seas_dir]]}</p>
+
+<h2 id="response-format">Response Format</h2>
+
+<hr />
+
+<p>The response is a JSON object with the following structure:
+{"seas": [[seas<em>hs, seas</em>pd, seas_dir]]}</p>
+
 <ul>
-<li><code class="notranslate">seas_hs</code>: Sea state height (meters).</li>
-<li><code class="notranslate">seas_pd</code>: Period of the sea state (hours).</li>
-<li><code class="notranslate">seas_dir</code>: Direction of the sea state (degrees).</li>
+<li><code>seas_hs</code>: Sea state height (meters).</li>
+<li><code>seas_pd</code>: Period of the sea state (hours).</li>
+<li><code>seas_dir</code>: Direction of the sea state (degrees).</li>
 </ul>
-<h2>Example Request</h2>
-<hr>
-<p><a href="http://wa-vw-er/webapps/er_ml_projects/davink/amphitrite/jsonAutoSeas.cgi?first_time_step=2024012212&amp;site=Woodside%20-%20Scarborough%2010%20Days&amp;src=autoseas&amp;winds=200/10/3,210/20/3,220/30/3" rel="nofollow">http://wa-vw-er/webapps/er_ml_projects/davink/amphitrite/jsonAutoSeas.cgi?first_time_step=2024012212&amp;site=Woodside%20-%20Scarborough%2010%20Days&amp;src=autoseas&amp;winds=200/10/3,210/20/3,220/30/3</a></p>
-<h2>Example Response</h2>
-<hr>
+
+<h2 id="example-request">Example Request</h2>
+
+<hr />
+
+<p>http://wa-vw-er/webapps/er<em>ml</em>projects/davink/amphitrite/jsonAutoSeas.cgi?first<em>time</em>step=2024012212&amp;site=Woodside%20-%20Scarborough%2010%20Days&amp;src=autoseas&amp;winds=200/10/3,210/20/3,220/30/3</p>
+
+<h2 id="example-response">Example Response</h2>
+
+<hr />
+
 <p>{"seas": [[0.4, 4, 200], [0.8, 6, 210], [1.7, 6, 220]]}</p>
-<h2>Error Handling</h2>
-<hr>
+
+<h2 id="error-handling">Error Handling</h2>
+
+<hr />
+
 <p>At this point there is minimal useful error handling (TODO)</p>
-<h2>Versioning</h2>
-<hr>
+
+<h2 id="versioning">Versioning</h2>
+
+<hr />
+
 <p>Version: 2.0</p>
-<h2>Contact</h2>
-<hr>
-<p>Daz Vink: <a href="mailto:daz.vink@bom.gov.au">daz.vink@bom.gov.au</a></p>
-<hr>
+
+<h2 id="contact">Contact</h2>
+
+<hr />
+
+<p>Daz Vink: daz.vink@bom.gov.au</p>
+
+<hr />
+</body></html>
