--- a/html/navBar.html
+++ b/html/navBar.html
@@ -16,7 +16,7 @@
 
 <!-- notes modal-->
 <div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModal" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="notesModalTitle">Hints</h5>
@@ -42,7 +42,7 @@
           </ul>
         </p>
         <p>
-          <b>Sites list</b>  
+          <b>Site partition tables</b>  
           <ul>
             <li>html table of sites from the database linking to api's used for the data retrieval</li>  
             <li>data is the latest available in the database for each particular site</i></li>          
@@ -61,7 +61,7 @@
           </ul>
         </p>  
         <p>
-          <b>Table names</b>  
+          <b>Auswave table names</b>  
           <ul>
             <li>Auswave table names and their respective lat lons. Useful for setting up the configuration file </li>  
           </ul>
