updated fetch tables and added docs to dashboard

--- a/html/nav.html
+++ b/html/nav.html
@@ -15,7 +15,6 @@
 	}
 </style>
 	
-
 <nav class="sidebar sticky-left col-lg-2 bg-dark">
 	<div class="sidebar-sticky p-0">	
 		
@@ -29,8 +28,11 @@
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('table_names')">Auswave table names</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate')">Activate run</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('logging')">Log file</a></li>
+			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">Docs</a></li>
 		</ul>
 		
+		
+
 	</div>
 	
 </nav>
