finishing off transformer

--- a/transformer/html/navBar.html
+++ b/transformer/html/navBar.html
@@ -9,9 +9,10 @@
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
 	<a class="navbar-brand col-md-2 p-3" id="head" href="#" onclick="parent.location = 'dashboard.php'"><i><?php echo($TITLE); ?></i></a>
     <ul class="nav">
-        <li><a class="nav-link navbar-nav navbar-right text-secondary h6" id="notesMenu" href="#">help</a></li>        
+      <li><a class="nav-link navbar-nav navbar-right text-secondary h6" href="#" onclick="changeLink('edit-config')"><i>edit-config</i></a></li>
+      <li><a class="nav-link navbar-nav navbar-right text-secondary h6" id="notesMenu" href="#">hints</a></li>
     </ul>
-</nav>	
+  </nav>	
 
 
 <!-- request GFE modal -->
