--- a/html/nav.html
+++ b/html/nav.html
@@ -1,3 +1,6 @@
+<?php 
+	include('config.php');
+?>
 <style>
 	.sidebar {
 		position: fixed;
@@ -29,10 +32,15 @@
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('activate')">Activate run</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('logging')">Log file</a></li>
 			<li><a class="nav-link text-secondary h7 font-italic" href="#" onclick="changeLink('readme')">Docs</a></li>
+			<li><a class="nav-link text-secondary h6" id="clients" data-toggle="collapse" aria-expanded="true" aria-controls="collapseClients" href="#collapseClients">Tools</a></li>
+			
+			<div id="collapseClients" class="collapse multi-collapse">
+				<ul>
+					<li><a class="nav-link text-secondary h6 font-italic" href="<?php echo($BASE_URL . 'autoseas/html/dashboard.php'); ?>" target='autoseas'>Autoseas</a></li>
+					<li><a class="nav-link text-secondary h6 font-italic" href="<?php echo($BASE_URL . 'transformer/html/dashboard.php'); ?>" target='transformer'>Transformer</a></li>				
+				</ul>
+			</div>				
 		</ul>
-		
-		
-
 	</div>
 	
 </nav>
